mg-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mg-ui
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: mg-ui
  template:
    metadata:
      labels:
        app: mg-ui
    spec:
      containers:
        - image: mischl01/mgnginx1:0.2
          name: mg-ui
          ports:
            - containerPort: 80
