mg-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mg-ui
spec:
  ports:
  - port: 443
    targetPort: 80
  selector:
    app: mg-ui
