guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  rules:
    - host: guestbook.michael-grossmann.info
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
